2005-09-13  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/javap.in,
	kaffe/scripts/native2ascii.in,
	kaffe/scripts/rmic.in,
	kaffe/scripts/serialver.in:
	Updated to reflect moved tools.jar location.

2005-09-13  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.classlibrary-compile:
	Updated information for gcj, javac, kjc and added information for
	gcjx.

2005-09-13  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/org/tritonus/midi/device/alsa/AlsaMidiIn.java:
	Fixed comment to spell out micro second for gcjx.

2005-09-11  Dalibor Topic  <robilad@kaffe.org>

	Merged in in-progress JDWP implementation from GNU Classpath.
	It needs a volunteer to implement the missing native methods.

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/all.files:
	Regenerated.

	* libraries/javalib/gnu/classpath/jdwp/Jdwp.java,
	libraries/javalib/gnu/classpath/jdwp/JdwpConstants.java,
	libraries/javalib/gnu/classpath/jdwp/VMFrame.java,
	libraries/javalib/gnu/classpath/jdwp/VMIdManager.java,
	libraries/javalib/gnu/classpath/jdwp/VMVirtualMachine.java,
	libraries/javalib/gnu/classpath/jdwp/event/ClassPrepareEvent.java,
	libraries/javalib/gnu/classpath/jdwp/event/Event.java,
	libraries/javalib/gnu/classpath/jdwp/event/EventManager.java,
	libraries/javalib/gnu/classpath/jdwp/event/EventRequest.java,
	libraries/javalib/gnu/classpath/jdwp/event/ThreadEndEvent.java,
	libraries/javalib/gnu/classpath/jdwp/event/ThreadStartEvent.java,
	libraries/javalib/gnu/classpath/jdwp/event/VmDeathEvent.java,
	libraries/javalib/gnu/classpath/jdwp/event/VmInitEvent.java,
	libraries/javalib/gnu/classpath/jdwp/event/filters/ClassExcludeFilter.java,
	libraries/javalib/gnu/classpath/jdwp/event/filters/ClassMatchFilter.java,
	libraries/javalib/gnu/classpath/jdwp/event/filters/ClassOnlyFilter.java,
	libraries/javalib/gnu/classpath/jdwp/event/filters/ConditionalFilter.java,
	libraries/javalib/gnu/classpath/jdwp/event/filters/CountFilter.java,